--- a/src/app/home/profile/profile-chage-password/profile-chage-password.component.html
+++ b/src/app/home/profile/profile-chage-password/profile-chage-password.component.html
@@ -6,7 +6,8 @@
                 <h6>Mật khẩu hiện tại:</h6>
             </div>
             <div class="col-8">
-                <input nz-input placeholder="Mật khẩu hiện tại" nzSize="default" formControlName="currentPassword" />
+                <input nz-input type="password" placeholder="Mật khẩu hiện tại" nzSize="default"
+                    formControlName="currentPassword" />
                 <div *ngIf="statusError.currentPassword.invalid && (statusError.currentPassword.dirty ||
                     statusError.currentPassword.touched) ">
                     <div *ngIf=" statusError.currentPassword.errors">
@@ -22,7 +23,8 @@
                 <h6>Mật khẩu mới:</h6>
             </div>
             <div class="col-8">
-                <input nz-input placeholder="Mật khẩu mới" nzSize="default" formControlName="newPassword" />
+                <input nz-input type="password" placeholder="Mật khẩu mới" nzSize="default"
+                    formControlName="newPassword" />
                 <div *ngIf="statusError.newPassword.invalid && (statusError.newPassword.dirty ||
                     statusError.newPassword.touched) ">
                     <div *ngIf=" statusError.newPassword.errors">
@@ -38,22 +40,34 @@
                 <h6>Nhập lại mật khẩu mới:</h6>
             </div>
             <div class="col-8">
-                <input nz-input placeholder="Nhập lại mật khẩu mới" nzSize="default"
+                <input nz-input type="password" placeholder="Nhập lại mật khẩu mới" nzSize="default"
                     formControlName="confirmPassword" />
-                    <div *ngIf="statusError.confirmPassword.invalid && (statusError.confirmPassword.dirty ||
+                <div
+                    *ngIf=" statusError.confirmPassword.touched && (chagePasswordata.value.newPassword !== chagePasswordata.value.confirmPassword)">
+                    <small style="color: red;">Xác nhận không khớp với mật khẩu</small>
+                </div>
+                <!-- <div *ngIf="statusError.confirmPassword.invalid && (statusError.confirmPassword.dirty ||
                     statusError.confirmPassword.touched) ">
                     <div *ngIf=" statusError.confirmPassword.errors">
                         <div *ngIf="statusError.confirmPassword.errors!['required']">
                             <small style="color: red;">Vui lòng nhập lại mật khẩu mới</small>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="row text-end">
-            <div class="col-12">
+            <div class="col-12"
+                *ngIf="statusError.currentPassword.touched && statusError.newPassword.touched && statusError.confirmPassword.touched && (chagePasswordata.value.newPassword === chagePasswordata.value.confirmPassword) && (chagePasswordata.value.currentPassword != '') ; else changePassword">
                 <button class="btn btn-primary">Đổi mật khẩu</button>
             </div>
+
+            <ng-template #changePassword>
+                <div class="col-12">
+                    <button class="btn btn-primary" disabled>Đổi mật khẩu</button>
+                </div>
+            </ng-template>
+
         </div>
     </form>
 </div>
