--- a/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice.component.html
+++ b/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice.component.html
@@ -1,8 +1,11 @@
 <div *ngFor="let item of listInvoiceID">
-    <app-retail-customer-history-invoice-detail [invoiceID]="item.id" [invoiceDate]="{
-        createdAt: item. createdAt,
-        createdBy: item.createdBy.name
-    }" role="button" (click)="SelectInvoice(item.id, item.barcode)">
-    </app-retail-customer-history-invoice-detail>
+    <div class="history__invoice__info">
+        <app-retail-customer-history-invoice-detail [invoiceID]="item.id" [invoiceDate]="{
+            createdAt: item. createdAt,
+            createdBy: item.createdBy.name
+        }" role="button" (click)="SelectInvoice(item.id, item.barcode)" [statusReturnProduct]="item.isReturn">
+        </app-retail-customer-history-invoice-detail>
+    </div>
+    
     <nz-divider></nz-divider>
 </div>
