print broken report

--- a/src/app/home/home-template/home-template.component.html
+++ b/src/app/home/home-template/home-template.component.html
@@ -21,9 +21,9 @@
       </ul>
     </div>
     <div class="header__info d-flex justify-content-md-between align-items-center">
-      <nz-badge [nzCount]="5" role="button">
+      <!-- <nz-badge [nzCount]="5" role="button">
         <i class="fa fa-bell" style="font-size: 32px;"></i>
-      </nz-badge>
+      </nz-badge> -->
       <nz-divider nzType="vertical"></nz-divider>
       <nz-avatar [nzSrc]="avatar"></nz-avatar>
       <ul nz-menu nzMode="horizontal" class="pl-1">
