--- a/src/app/login/login-template/login-template.component.css
+++ b/src/app/login/login-template/login-template.component.css
@@ -4,7 +4,8 @@ div.main {
     justify-content: center;
     align-items: center;
 }
-div.form{
+
+div.form {
     /* border: 2px solid black; */
     width: 400px;
     padding: 30px;
@@ -12,15 +13,24 @@ div.form{
     box-shadow: 0px 0 30px rgb(1 41 112 / 10%);
 }
 
-.login__button{
+.login__button {
     margin-top: 20px;
     display: flex;
     justify-content: end;
 }
-.form-group{
+
+.form-group {
     margin-bottom: 10px;
 }
 
-h4{
+h4 {
     color: #012970;
+}
+
+nz-input-group {
+    padding: 6px;
+    border-radius: 5px;
+}
+#login__password:focus-visible{
+    outline: none;
 }
